CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

PROJECT(slog_sample LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)  # TODO: 使用C++14

FIND_PACKAGE(GDAL)
IF(GDAL_FOUND)
    ADD_DEFINITIONS(-DUSE_CPLOGGER)
    INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIRS})
    LINK_DIRECTORIES(${GDAL_LIBRARY_DIRS})
ENDIF(GDAL_FOUND)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(slog_sample sample.cpp)

IF(GDAL_FOUND)
    TARGET_LINK_LIBRARIES(slog ${GDAL_LIBRARIES})
ENDIF(GDAL_FOUND)